--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,4 @@
 title: "IS415-GAA"
 ---
 
-This is a Quarto website.
-
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+Welcome to **IS415 Geospatial Analytics and Applications**. You will find my work done for this course
