--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,14 @@
 ---
 title: "IS415-GAA"
+listing:
+  id: exercises
+  contents: 
+    - "Hands-on_Ex/*/*.qmd"
+  type: default
 ---
 
-Welcome to **IS415 Geospatial Analytics and Applications**. You will find my work done for this course
+Welcome to **IS415 Geospatial Analytics and Applications**. You will find my work done for this course.
+
+## Hands-on Exercises
+::: {#exercises}
+:::
