--- a/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
+++ b/Hands-on_Ex/Hands-on_Ex02/Hands-on_Ex02.qmd
@@ -118,7 +118,10 @@ write_rds(mpsz_pop2020, "data/mpszpop2020.rds")
 
 Choropleth mapping involves the symbolisation of enumeration units, such as countries, provinces, states, counties or census units, using area patterns or graduated colors.
 
-Two approaches can be used to prepare thematic map using `tmap`, they are: - Plotting quickly using `qtm()` - Plotting highly customisable thematic maps by using `tmap` elements
+Two approaches can be used to prepare thematic map using `tmap`, they are: 
+
+- Plotting quickly using `qtm()` 
+- Plotting highly customisable thematic maps by using `tmap` elements
 
 ## Plotting a choropleth map using `qtm()`
 
@@ -204,8 +207,7 @@ Besides *alpha*, there are three other arguments for tm_borders():
 
 ## Data Classification using `tmap`
 
-`tmap` provides us with ten classification methods: *fixed*, *sd*, *equal*, *pretty* (default), *quantile*, *kmeans*, *hclust*, *bclust*, *fisher*, and *jenks*.
-These can be specified in `tm_fill()` or `tm_polygons()`
+`tmap` provides us with ten classification methods: *fixed*, *sd*, *equal*, *pretty* (default), *quantile*, *kmeans*, *hclust*, *bclust*, *fisher*, and *jenks*. These can be specified in `tm_fill()` or `tm_polygons()`
 
 ### Kmeans example with 5 classes
 
@@ -214,11 +216,13 @@ tm_shape(mpsz_pop2020) + tm_fill("DEPENDENCY", n = 5, style = "kmeans") + tm_bor
 ```
 
 ### sd example with 5 classes
+
 ```{r}
 tm_shape(mpsz_pop2020) + tm_fill("DEPENDENCY", n = 5, style = "sd") + tm_borders(alpha = 0.5)
 ```
 
 ## Choropleth Maps and Custom breaks
+
 With built-in styles, category breaks are computed internally. To override defaults, we can set breakpoints using the `breaks` argument in `tm_fill()`. We should also not that `tmap` breaks have a maximum and minimum. Thus, to retrieve n categories, n+1 elements must be specified in the `breaks` argument in increasing order.
 
 Before we explore more on this, let's take a look at some statistics of the `DEPENDENCY` field.
@@ -230,7 +234,7 @@ summary(mpsz_pop2020$DEPENDENCY)
 Using the above results as reference, we set the breakpoints at .6, .7, .8, and .9. With the addition of the min and max breakpoints, the *breaks* vector is c(0, 0.6, 0.7, 0.8, 0.9, 1).
 
 ```{r}
-tm_shape(mpsz_pop2020) + tm_fill("DEPENDENCY", breaks = c(0, 0.60, 0.70, 0.80, 0.90, 1.00, 19)) + tm_borders(alpha = 0.5)
+tm_shape(mpsz_pop2020) + tm_fill("DEPENDENCY", breaks = c(0, 0.50, 0.60, 0.70, 0.80, 1.00, 19)) + tm_borders(alpha = 0.5)
 ```
 
 ## Colour Scheme
@@ -255,7 +259,7 @@ tm_shape(mpsz_pop2020) +
   tm_fill("DEPENDENCY",
           n = 6,
           style = "quantile",
-          palette = "-Greens") +
+          palette = "-Blues") +
   tm_borders(alpha = 0.5)
 ```
 
@@ -264,7 +268,9 @@ tm_shape(mpsz_pop2020) +
 Map layout refers to the combination of all map elements into a cohensive map. Map elements include among others the objects to be mapped, the title, the scale bar, the compass, margins and aspects ratios.
 
 ### Map Legend
+
 Within `tmap` there are several options to modify a legend
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY",
@@ -285,6 +291,7 @@ tm_shape(mpsz_pop2020)+
 ```
 
 ### Map Style
+
 `tmap` allows a wide variety of layout settings to be changed. They can be called by using `tmap_style()`.
 
 Let's first try out the "classic" style
@@ -299,7 +306,9 @@ tm_shape(mpsz_pop2020) +
 ```
 
 ### Cartographic Furniture
+
 Compass, scale bar, and grid lines can also be added using `tmap`.
+
 ```{r}
 tm_shape(mpsz_pop2020)+
   tm_fill("DEPENDENCY",
@@ -322,20 +331,25 @@ tm_shape(mpsz_pop2020)+
 ```
 
 To reset styling, we can use `tmap_style()`
+
 ```{r}
 tmap_style("white")
 ```
 
 ## Small Multiple Maps A.K.A Facet Maps
+
 These maps are composed of many maps arrange side-by-side, and sometimes stacked vertically. Small multiple maps enable the visualisation of how spatial relationships change with respect to another variable, such as time.
 
 There are 3 ways using `tmap` that we can plot these maps:
+
 -   assigning multiple values to at least one of the aesthetic arguments
 -   defining a group-by variable in `tm_facets()`
 -   creating multiple stand-alone maps with `tmap_arrange()`
 
 ### Using multiple values
+
 In this example, small multiple choropleth maps are created by defining `ncols` in `tm_fill()`
+
 ```{r}
 tm_shape(mpsz_pop2020) +
   tm_fill(c("YOUNG", "AGED"),
@@ -346,6 +360,7 @@ tm_shape(mpsz_pop2020) +
 ```
 
 In this example, small multiple choropleth maps are created by assigning multiple values to at least one of the aesthetic arguments
+
 ```{r}
 tm_shape(mpsz_pop2020) +
   tm_polygons(c("DEPENDENCY", "AGED"),
@@ -355,6 +370,7 @@ tm_shape(mpsz_pop2020) +
 ```
 
 ### Group-by variable in in `tm_facets()`
+
 In this example, multiple small choropleth maps are created by using `tm_facets()`.
 
 ```{r}
@@ -373,6 +389,7 @@ tm_shape(mpsz_pop2020) +
 ```
 
 ### Creating multiple stand-alone maps with `tmap_arrange()`
+
 In this example, multiple small choropleth maps are created by creating multiple stand-alone maps with `tmap_arrange()`.
 
 ```{r}
@@ -383,7 +400,9 @@ tmap_arrange(youngmap, agedmap, asp=1, ncol=2)
 ```
 
 ## Selection Criteria
+
 Instead of creating a facet map, the selection function can be used to map spatial objects meeting the selection criterion.
+
 ```{r}
 tm_shape(mpsz_pop2020[mpsz_pop2020$REGION_N=="CENTRAL REGION", ]) +
   tm_fill("DEPENDENCY",
