--- a/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
+++ b/Hands-on_Ex/Hands-on_Ex03/Hands-on_Ex03.qmd
@@ -588,3 +588,212 @@ clarkevans.test(childcare_jw_ppp,
                 nsim = 99)
 ```
 As p \< 0.05, H0 can be rejected.
+
+# 2nd Order
+We will be reusing the data from the previous example.
+
+## Analysing Spatial Point Process with the G-Function
+The **G function** measures the distribution of the distances from an arbitrary even to its nearest event. We are interested in the Choa Chu Kang planning area
+
+### Choa Chu Kang Planning Area
+We use the `Gest()` function from `spatstat` to compute the G-function
+
+```{r}
+G_CK <- Gest(childcare_ck_ppp, correction = "border")
+plot(G_CK, xlim=c(0,500))
+```
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Choa Chu Kang
+
+-   H1: Non-Random distribution of childcare centres in Choa Chu Kang
+
+Reject H0 if p \< 0.001.
+
+We use the `envelope()` function to perform a Monte Carlo test
+
+```{r}
+G_CK.csr <- envelope(childcare_ck_ppp, Gest, nsim = 999)
+```
+
+We can then plot the results
+```{r}
+plot(G_CK.csr)
+```
+
+### Tampines Planning Area
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Tampines
+
+-   H1: Non-Random distribution of childcare centres in Tampines
+
+Reject H0 if p \< 0.001.
+```{r}
+G_tm.csr <- envelope(childcare_tm_ppp, Gest, correction = "all", nsim = 999)
+```
+We can then plot the results
+```{r}
+plot(G_tm.csr)
+```
+
+## Analysing Spatial Point Process with the F-Function
+The **F function** estimates the empty space function F(r) or its hazard rate h(r) from a point pattern in a window of arbitrary shape. We will be using `Fest()` from `spatstat` to achieve this.
+
+### Choa Chu Kang Planning Area
+
+```{r}
+F_CK <- Fest(childcare_ck_ppp)
+plot(F_CK)
+```
+
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Choa Chu Kang
+
+-   H1: Non-Random distribution of childcare centres in Choa Chu Kang
+
+Reject H0 if p \< 0.001.
+```{r}
+F_CK.csr <- envelope(childcare_ck_ppp, Fest, nsim = 999)
+```
+
+We can then plot the results
+```{r}
+plot(F_CK.csr)
+```
+
+### Tampines Planning Area
+```{r}
+F_tm <- Fest(childcare_tm_ppp, correction = "best")
+plot(F_tm)
+```
+
+
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Tampines
+
+-   H1: Non-Random distribution of childcare centres in Tampines
+
+Reject H0 if p \< 0.001.
+
+```{r}
+F_tm.csr <- envelope(childcare_tm_ppp, Fest, correction = "all", nsim = 999)
+```
+
+
+```{r}
+plot(F_tm.csr)
+```
+
+## Analysing Spatial Point Process Using K-Function
+K-function measures the number of events found up to a given distance of any particular event. We will be using the `Kest()` function from `spatstat`.
+### Choa Chu Kang Planning Area
+
+```{r}
+K_ck <- Kest(childcare_ck_ppp, correction = "Ripley")
+plot(K_ck, . -r ~ r, ylab= "K(d)-r", xlab = "d(m)")
+```
+
+
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Choa Chu Kang
+
+-   H1: Non-Random distribution of childcare centres in Choa Chu Kang
+
+Reject H0 if p \< 0.001.
+
+```{r}
+K_ck.csr <- envelope(childcare_ck_ppp, Kest, nsim = 99, rank = 1, glocal=TRUE)
+```
+
+
+```{r}
+plot(K_ck.csr, . - r ~ r, xlab="d", ylab="K(d)-r")
+```
+
+### Tampines Planning Area
+```{r}
+K_tm <- Kest(childcare_tm_ppp, correction = "Ripley")
+plot(K_tm, . -r ~ r, 
+     ylab= "K(d)-r", xlab = "d(m)", 
+     xlim=c(0,1000))
+```
+
+
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Tampines
+
+-   H1: Non-Random distribution of childcare centres in Tampines
+
+Reject H0 if p \< 0.001.
+
+
+```{r}
+K_tm.csr <- envelope(childcare_tm_ppp, Kest, nsim = 99, rank = 1, glocal=TRUE)
+```
+```{r}
+plot(K_tm.csr, . - r ~ r, 
+     xlab="d", ylab="K(d)-r", xlim=c(0,500))
+```
+
+## Analysing Spatial Point Process Using L-Function
+The **L function** is a transformation of the K function, designed to help in identifying clustering or regularity in spatial point patterns. We will be using `Lest()` from `spatstat` to achieve this.
+
+### Choa Chu Kang Planning Area
+```{r}
+L_ck <- Lest(childcare_ck_ppp, correction = "Ripley")
+plot(L_ck, . -r ~ r, 
+     ylab= "L(d)-r", xlab = "d(m)")
+```
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Choa Chu Kang
+
+-   H1: Non-Random distribution of childcare centres in Choa Chu Kang
+
+Reject H0 if p \< 0.001.
+
+```{r}
+L_ck.csr <- envelope(childcare_ck_ppp, Lest, nsim = 99, rank = 1, glocal=TRUE)
+```
+
+
+```{r}
+plot(L_ck.csr, . - r ~ r, xlab="d", ylab="L(d)-r")
+```
+
+### Tampines Planning Area
+```{r}
+L_tm = Lest(childcare_tm_ppp, correction = "Ripley")
+plot(L_tm, . -r ~ r, 
+     ylab= "L(d)-r", xlab = "d(m)", 
+     xlim=c(0,1000))
+```
+
+
+Perform a complete Spatial Randomness Test with the following hypotheses:
+
+-   H0: Random distribution of childcare centres in Tampines
+
+-   H1: Non-Random distribution of childcare centres in Tampines
+
+Reject H0 if p \< 0.001.
+
+
+```{r}
+L_tm.csr <- envelope(childcare_tm_ppp, Lest, nsim = 99, rank = 1, glocal=TRUE)
+```
+
+
+```{r}
+plot(L_tm.csr, . - r ~ r, 
+     xlab="d", ylab="L(d)-r", xlim=c(0,500))
+```
+
+
+
+
