--- a/Take-home_EX/Take-home_Ex01/Take-home_Ex01.qmd
+++ b/Take-home_EX/Take-home_Ex01/Take-home_Ex01.qmd
@@ -22,7 +22,9 @@ pacman::p_load(sf, tmap, tidyverse)
 ```
 
 # Data
+
 ## Import
+
 We first want to load in the conflict data ranging from 2021-2024
 
 ```{r}
@@ -40,11 +42,13 @@ madm1_sf <- st_read(dsn = "data/geospatial", layer = "mmr_polbnda2_adm1_250k_mim
 ## Wrangling
 
 We first want to rename our states from `myanmaradm1` to have the same naming scheme as `conflict2124`
+
 ```{r}
 madm1_sf$ST <- gsub("\\s*\\(([^)]+)\\)", "-\\1", madm1_sf$ST)
 ```
 
-We also want to break down the date time of the data into quarters
+We also want to normalise
+
 ```{r}
 tm_shape(madm1_sf) +
   tm_polygons() +
